# rust-ledger-reports

./: Cargo.toml
sample_config/: ledger_reports.toml
src/: configuration.rs  date_utils.rs  input_data.rs  ledger_utils.rs  main.rs  report.rs  report_data.rs
src/ledger_utils/: account_balance.rs  balance.rs  balances.rs  handle_foreign_currencies.rs  join_ledgers.rs  mod.rs  monthly_report.rs  prices.rs  tree_balance.rs
src/report_data/: make_report_data.rs  mod.rs  monthly_table.rs
src/report_data/reports/: assets_chart.rs  assets_table.rs  expenses_chart.rs  mod.rs  summary_tree.rs
src/report_data/structures/: chart.rs  mod.rs  table.rs  tree.rs
src/templates/: area_chart.hbs  line_chart.hbs  main.css  main.hbs  main.js  table.hbs  tree.hbs  tree_node.hbs
