[package]
name = "ledger-reports"
version = "0.1.0"
authors = ["Marek G <marek@nomail.com>"]

[dependencies]
ledger-parser = "2"
#ledger-parser = { path = "../../libs/rust-ledger-parser", version = "*" }
chrono = "0.4"
rust_decimal = "0.10"
handlebars = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
