[package]
name = "ledger_reports"
version = "0.1.0"
authors = ["Marek G <marek@nomail.com>"]
edition = "2018"

[dependencies]
ledger-parser = "5"
#ledger-parser = { path = "../../libs/rust-ledger-parser", version = "*" }
ledger-utils = "0.4"
clap = "2"
toml = "0.5"
chrono = "0.4"
rust_decimal = "1"
num-traits = "0.2"
handlebars = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
